# fastmarc

./: README.org  benchmark.py  pyproject.toml  setup.py
fastmarc/: __init__.py  reader.pyx
